openfreebuds (0.12.2-2) bookworm jammy kinetic lunar; urgency=medium

  * Fix: Crash in Windows 10-11
  * Packaging: declare min Python version
  * Update dependencies (Pillow, mmk_updater, sv_ttk)
  * Begin migration from Launchpad PPA

 -- MelianMiko <support@mmk.pw>  Tue, 09 May 2023 15:11:38 +0700

openfreebuds (0.12.1-2) bookworm kinetic jammy; urgency=medium

  * New: HUAWEI FreeLace Pro support (full)
  * New: HUAWEI FreeBuds 5i support (partial)
  * New: HUAWEI FreeBuds Pro 2 support (partial)
  * Update RU translations
  * Disable adapter validation at start
  * Minor bugfixes

 -- MelianMiko <melianmiko@gmail.com>  Fri, 23 Dec 2022 15:11:16 +0700