@@ -1,3 +1,9 @@
+openfreebuds (0.12.3-1) bookworm jammy kinetic lunar; urgency=medium
+
+  * Fix update checker crash
+
+ -- MelianMiko <support@mmk.pw>
+
 openfreebuds (0.12.2-2) bookworm jammy kinetic lunar; urgency=medium
 
   * Fix: Crash in Windows 10-11
